--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,22 @@
 /* Wildcard to prevent browser from using default*/
 
 * {
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 
 body {
-    width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: pink;
+    display: flex;
+    flex-direction: column;
+}
+
+
+main {}
+
+footer {
+    margin-top: auto;
 }
