--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /* Google fonts here*/
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
 /* Wildcard to prevent browser from using default*/
 
@@ -14,8 +15,17 @@ body {
     background-color: pink;
     display: flex;
     flex-direction: column;
+    font-family: 'Shadows Into Light', cursive;
 }
 
+header {
+    margin: 20px;
+}
+
+h1 {
+    font-size: 3rem;
+    text-align: center;
+}
 
 main {}
 
