--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ footer {
     text-align: center;
     padding: 10px 0 0 0;
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     list-style-type: none;
 }
